Added easing keyframes and args and started working on reloadable animations

--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,7 @@ minecraft {
     }
 }
 
+
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
@@ -107,7 +108,6 @@ dependencies {
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -130,7 +130,9 @@ jar {
 jar.finalizedBy('reobfJar') 
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
-
+sourceSets {
+    main { output.resourcesDir = output.classesDir }
+}
 publishing {
     publications {
         mavenJava(MavenPublication) {
