--- a/build.gradle
+++ b/build.gradle
@@ -112,6 +112,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+
+    test {
+        useJUnitPlatform()
+    }
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
