--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,9 +5,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ 1.15 ]
+    branches: [ 1.15, develop ]
   pull_request:
-    branches: [ 1.15 ]
+    branches: [ 1.15, develop ]
 
 jobs:
   build:
@@ -22,5 +22,20 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Assemble with Gradle
+      run: ./gradlew --info assemble
+    - name: Test with Gradle
+      run: ./gradlew --info test
+    - name: Zip Test Results
+      if: ${{ always() }}
+      run: |
+        set -x
+        pwd
+        ls -lR
+        zip -r reports.zip core/build/reports
+    - name: Upload Test Results
+      uses: actions/upload-artifact@v2
+      if: ${{ always() }}
+      with:
+        name: reports.zip
+        path: reports.zip
