--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,22 +26,44 @@ jobs:
       run: ./gradlew --info assemble
     - name: Test with Gradle
       run: ./gradlew --info test
+    - name: Docs with Gradle
+      run: ./gradlew --info javadoc
     - name: Zip Test Results
       if: ${{ always() }}
       run: |
         set -x
-        pwd
+        OLDWD=`pwd`
         ls
-        zip -r reports.zip ./build/reports/tests/test
+        cd ./build/reports/tests
+        zip -r "$OLDWD/reports.zip" test
+    - name: Zip Docs
+      if: ${{ always() }}
+      run: |
+        set -x
+        OLDWD=`pwd`
+        cd ./build/docs
+        zip -r "$OLDWD/docs.zip" javadoc
     - name: Upload Test Results
       uses: actions/upload-artifact@v2
       if: ${{ always() }}
       with:
         name: reports.zip
         path: reports.zip
+    - name: Upload Docs
+      uses: actions/upload-artifact@v2
+      if: ${{ always() }}
+      with:
+        name: docs.zip
+        path: docs.zip
     - name: Upload Build
       uses: actions/upload-artifact@v2
       if: ${{ always() }}
       with:
         name: geckolib-1.15-1.0.0.jar
         path: build/libs/geckolib-1.15-1.0.0.jar
+    - name: Deploy Docs to Pages
+      uses: JamesIves/github-pages-deploy-action@3.5.7
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: build/docs/javadoc
