--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -61,9 +61,13 @@ jobs:
       with:
         name: geckolib-1.15-1.0.0.jar
         path: build/libs/geckolib-1.15-1.0.0.jar
-    - name: Deploy Docs to Pages
-      uses: JamesIves/github-pages-deploy-action@3.5.7
+    - name: Deploy Docs to AWS S3
+      uses: jakejarvis/s3-sync-action@master
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: build/docs/javadoc
+        args: --acl public-read --follow-symlinks --delete
+      env:
+        AWS_S3_BUCKET: geckolib
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
+        SOURCE_DIR: 'build/docs/javadoc'      # optional: defaults to entire repository
