Upload to s3 'javadocs' folder

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -71,3 +71,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
         SOURCE_DIR: 'build/docs/javadoc'      # optional: defaults to entire repository
+        DEST_DIR: 'javadocs'
