--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.8.7+build.201
 # Mod Properties
 mod_version = 2.0.0-beta.1
 maven_group = software.bernie.geckolib
-archives_base_name = geckolib-fabric-1.15
+archives_base_name = fabric-1.15.2-geckolib
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
