--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.15.2+build.17
 loader_version=0.8.7+build.201
 
 # Mod Properties
-mod_version = 2.0.0-beta.5
+mod_version = 2.0.0
 maven_group = software.bernie.geckolib
 archives_base_name = fabric-1.15.2-geckolib
 
