--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Mod Properties
+mod_version = 2.0.0
+maven_group = software.bernie.geckolib
+archives_base_name = forge-1.15.2-geckolib
