--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,6 @@ org.gradle.daemon=false
 mod_version = 2.0.0
 maven_group = software.bernie.geckolib
 archives_base_name = forge-1.15.2-geckolib
+
+#Publishing
+repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
