--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -72,3 +72,5 @@ jobs:
         AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
         SOURCE_DIR: 'build/docs/javadoc'      # optional: defaults to entire repository
         DEST_DIR: 'javadocs'
+        repsyUsername: ${{ secrets.repsyUsername }}
+        repsyPassword: ${{ secrets.repsyPassword }}
