Updated to 1.16.2 and fixed entities crashing when going into water
Signed-off-by: bernie-g <berniegandin@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Mod Properties
-mod_version = 2.0.0
+mod_version = 2.1 .0
 maven_group = software.bernie.geckolib
-archives_base_name = forge-1.16.1-geckolib
+archives_base_name = forge-1.16.2-geckolib
 
 #Publishing
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
