Fixed wrong gradle publish settings
Signed-off-by: bernie-g <berniegandin@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+mod_version=dev-snapshot
+archives_base_name=forge-1.15.2-geckolib
+
+#Publishing
+repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
