--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '2.0.0-beta.7'
+
+def snapshotVersion = System.getenv("GITHUB_RUN_NUMBER")
+version = snapshotVersion == null ? project.mod_version : "SNAPSHOT-" + snapshotVersion
+
 group = 'software.bernie.geckolib' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'forge-1.15.2-geckolib'
 
@@ -174,6 +177,9 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             artifact jar
+            artifact packageSources
+            artifact packageJavadoc
+            artifactId = project.archives_base_name
         }
     }
     repositories {
@@ -184,4 +190,19 @@ publishing {
 }
 artifacts {
     archives javadocJar
+}
+
+
+publishing {
+    repositories {
+        maven {
+            url repsyUrl
+            credentials {
+                def envUsername = System.getenv("repsyUsername")
+                def envPassword = System.getenv("repsyPassword")
+                username = envUsername == null ? repsyUsername : envUsername
+                password = envPassword == null ? repsyPassword : envPassword
+            }
+        }
+    }
 }
