--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.15.2-31.1.63'
     compile fg.deobf('com.eliotlash.molang:molang:SNAPSHOT.8')
     compile fg.deobf('com.eliotlash.mclib:mclib:SNAPSHOT.8')
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
