--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,14 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
-
-
+apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'java'
 def snapshotVersion = System.getenv("GITHUB_RUN_NUMBER")
 version = snapshotVersion == null ? project.mod_version : "SNAPSHOT-" + snapshotVersion
 
@@ -68,10 +69,11 @@ minecraft {
 }
 repositories {
     maven { url 'https://repo.repsy.io/mvn/fadookie/particleman' }
+    maven { url 'https://maven.enginehub.org/repo/' }
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.1.63'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.36'
     compile fg.deobf('com.eliotlash.molang:molang:SNAPSHOT.8')
     compile fg.deobf('com.eliotlash.mclib:mclib:SNAPSHOT.8')
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
@@ -84,6 +86,23 @@ dependencies {
     test {
         useJUnitPlatform()
     }
+}
+shadowJar {
+    dependencies {
+        include(dependency('com.eliotlash.molang:molang:.*'))
+        include(dependency('com.eliotlash.mclib:mclib:.*'))
+        include(dependency('com.fasterxml.jackson.core:.*'))
+        include(dependency('com.fasterxml.jackson.datatype:.*'))
+    }
+
+    relocate 'com.eliotlash', 'software.bernie.com.eliotlash'
+    relocate 'com.fasterxml', 'software.bernie.com.fasterxml'
+
+    classifier ''
+}
+
+reobf {
+    shadowJar {} // Reobfuscate the shadowed JAR
 }
 
 jar {
