fix error during gradle sync when respy credentials are not set

--- a/build.gradle
+++ b/build.gradle
@@ -174,8 +174,8 @@ publishing {
             credentials {
                 def envUsername = System.getenv("repsyUsername")
                 def envPassword = System.getenv("repsyPassword")
-                username = envUsername == null ? repsyUsername : envUsername
-                password = envPassword == null ? repsyPassword : envPassword
+                username = envUsername == null ? findProperty("repsyUsername") : envUsername
+                password = envPassword == null ? findProperty("repsyPassword") : envPassword
             }
         }
     }
