More refactoring including core geckolib extracted
Signed-off-by: bernie-g <berniegandin@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_version=dev-snapshot
 archives_base_name=forge-1.15.2-geckolib
+geckolib_core_version=1.0.2
 
 #Publishing
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
