--- a/build.gradle
+++ b/build.gradle
@@ -70,12 +70,15 @@ minecraft {
 repositories {
     maven { url 'https://repo.repsy.io/mvn/fadookie/particleman' }
     maven { url 'https://maven.enginehub.org/repo/' }
+    maven { url 'https://repo.repsy.io/mvn/gandiber/geckolib' }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.15.2-31.2.36'
     compile 'com.eliotlash.molang:molang:SNAPSHOT.8'
     compile 'com.eliotlash.mclib:mclib:SNAPSHOT.8'
+    compile "software.bernie.geckolib:geckolib-core:${project.geckolib_core_version}"
+    compile "software.bernie.geckolib:geckolib-core:${project.geckolib_core_version}:sources"
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
 
