--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core"]
 	path = core
-	url = git@github.com:bernie-g/geckolib-core.git
+	url = git@github.com:fadookie/geckolib-core.git
