--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core"]
 	path = core
-	url = https://github.com/fadookie/geckolib.git
+	url = https://github.com/bernie-g/geckolib-core.git
