Updated mods.toml to support 1.16.2 and 1.16.3

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -49,6 +49,6 @@ side="BOTH"
 [[dependencies.geckolib]]
 modId="minecraft"
 mandatory=true
-versionRange="[1.16.2]"
+versionRange="[1.16.2, 1.17)"
 ordering="NONE"
 side="BOTH"
