--- a/build.gradle
+++ b/build.gradle
@@ -125,7 +125,6 @@ jar {
 }
 
 jar.finalizedBy('reobfJar')
-
 sourceSets {
     main { output.resourcesDir = output.classesDir }
 }
@@ -155,6 +154,7 @@ artifacts {
 artifacts {
     archives javadocJar
 }
+tasks.packageSources.dependsOn tasks.shadowJar
 
 publishing {
     publications {
