Some more polishing touches before release

--- a/build.gradle
+++ b/build.gradle
@@ -138,7 +138,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             artifact shadowJar
-
+            artifact packageSources
             artifactId = project.archives_base_name
         }
     }
